# codemagic-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  app.rs  cli.rs  config.rs  main.rs  models.rs  ui.rs
src/app/: build_list.rs  build_popup.rs  dialogs.rs  download.rs  keys.rs  messages.rs  mod.rs  new_build.rs
src/ui/: build_popup.rs  builds.rs  dialogs.rs  mod.rs  new_build.rs  onboarding.rs
