[package]
name = "codemagic-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
