[package]
name = "codemagic-cli"
version = "1.2.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
toml = "1.1.1+spec-1.1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
